# samplicator

./: .gitignore  AUTHORS  Makefile.am  README.md  samplicator.conf  samplicator.service
packaging/scripts/: postinst.sh  postrnm.sh
